proto_schema_parser/antlr/ProtobufParser.py
# Generated from antlr/ProtobufParser.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ProtobufParser ( Parser ):

    grammarFileName = "ProtobufParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'\\uFEFF'", "'syntax'", "'import'", "'weak'", "'public'", 
                     "'package'", "'option'", "'inf'", "'repeated'", "'optional'", 
                     "'required'", "'bool'", "'string'", "'bytes'", "'float'", 
                     "'double'", "'int32'", "'int64'", "'uint32'", "'uint64'", 
                     "'sint32'", "'sint64'", "'fixed32'", "'fixed64'", "'sfixed32'", 
                     "'sfixed64'", "'group'", "'oneof'", "'map'", "'extensions'", 
                     "'to'", "'max'", "'reserved'", "'enum'", "'message'", 
                     "'extend'", "'service'", "'rpc'", "'stream'", "'returns'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "';'", "','", "'.'", "'/'", 
                     "':'", "'='", "'-'", "'+'", "'('", "')'", "'{'", "'}'", 
                     "'['", "']'", "'<'", "'>'" ]

    symbolicNames = [ "<INVALID>", "WS", "LINE_COMMENT", "BLOCK_COMMENT", 
                      "BYTE_ORDER_MARK", "SYNTAX", "IMPORT", "WEAK", "PUBLIC", 
                      "PACKAGE", "OPTION", "INF", "REPEATED", "OPTIONAL", 
                      "REQUIRED", "BOOL", "STRING", "BYTES", "FLOAT", "DOUBLE", 
                      "INT32", "INT64", "UINT32", "UINT64", "SINT32", "SINT64", 
                      "FIXED32", "FIXED64", "SFIXED32", "SFIXED64", "GROUP", 
                      "ONEOF", "MAP", "EXTENSIONS", "TO", "MAX", "RESERVED", 
                      "ENUM", "MESSAGE", "EXTEND", "SERVICE", "RPC", "STREAM", 
                      "RETURNS", "IDENTIFIER", "INT_LITERAL", "FLOAT_LITERAL", 
                      "INVALID_INT_LITERAL", "INVALID_FLOAT_LITERAL", "STRING_LITERAL", 
                      "SEMICOLON", "COMMA", "DOT", "SLASH", "COLON", "EQUALS", 
                      "MINUS", "PLUS", "L_PAREN", "R_PAREN", "L_BRACE", 
                      "R_BRACE", "L_BRACKET", "R_BRACKET", "L_ANGLE", "R_ANGLE" ]

    RULE_file = 0
    RULE_fileElement = 1
    RULE_commentDecl = 2
    RULE_syntaxDecl = 3
    RULE_syntaxLevel = 4
    RULE_stringLiteral = 5
    RULE_emptyDecl = 6
    RULE_packageDecl = 7
    RULE_packageName = 8
    RULE_importDecl = 9
    RULE_importedFileName = 10
    RULE_typeName = 11
    RULE_qualifiedIdentifier = 12
    RULE_fieldDeclTypeName = 13
    RULE_messageFieldDeclTypeName = 14
    RULE_extensionFieldDeclTypeName = 15
    RULE_oneofFieldDeclTypeName = 16
    RULE_methodDeclTypeName = 17
    RULE_fieldDeclIdentifier = 18
    RULE_messageFieldDeclIdentifier = 19
    RULE_extensionFieldDeclIdentifier = 20
    RULE_oneofFieldDeclIdentifier = 21
    RULE_methodDeclIdentifier = 22
    RULE_fullyQualifiedIdentifier = 23
    RULE_optionDecl = 24
    RULE_compactOptions = 25
    RULE_compactOption = 26
    RULE_optionName = 27
    RULE_optionValue = 28
    RULE_scalarValue = 29
    RULE_uintLiteral = 30
    RULE_intLiteral = 31
    RULE_floatLiteral = 32
    RULE_messageLiteralWithBraces = 33
    RULE_messageTextFormat = 34
    RULE_messageLiteralField = 35
    RULE_messageLiteralFieldName = 36
    RULE_specialFieldName = 37
    RULE_extensionFieldName = 38
    RULE_typeURL = 39
    RULE_value = 40
    RULE_messageValue = 41
    RULE_messageLiteral = 42
    RULE_listLiteral = 43
    RULE_listElement = 44
    RULE_listOfMessagesLiteral = 45
    RULE_messageDecl = 46
    RULE_messageName = 47
    RULE_messageElement = 48
    RULE_messageFieldDecl = 49
    RULE_fieldDeclWithCardinality = 50
    RULE_fieldCardinality = 51
    RULE_fieldName = 52
    RULE_fieldNumber = 53
    RULE_mapFieldDecl = 54
    RULE_mapType = 55
    RULE_mapKeyType = 56
    RULE_groupDecl = 57
    RULE_oneofDecl = 58
    RULE_oneofName = 59
    RULE_oneofElement = 60
    RULE_oneofFieldDecl = 61
    RULE_oneofGroupDecl = 62
    RULE_extensionRangeDecl = 63
    RULE_tagRanges = 64
    RULE_tagRange = 65
    RULE_tagRangeStart = 66
    RULE_tagRangeEnd = 67
    RULE_messageReservedDecl = 68
    RULE_names = 69
    RULE_enumDecl = 70
    RULE_enumName = 71
    RULE_enumElement = 72
    RULE_enumValueDecl = 73
    RULE_enumValueName = 74
    RULE_enumValueNumber = 75
    RULE_enumReservedDecl = 76
    RULE_enumValueRanges = 77
    RULE_enumValueRange = 78
    RULE_enumValueRangeStart = 79
    RULE_enumValueRangeEnd = 80
    RULE_extensionDecl = 81
    RULE_extendedMessage = 82
    RULE_extensionElement = 83
    RULE_extensionFieldDecl = 84
    RULE_serviceDecl = 85
    RULE_serviceName = 86
    RULE_serviceElement = 87
    RULE_methodDecl = 88
    RULE_methodName = 89
    RULE_inputType = 90
    RULE_outputType = 91
    RULE_methodElement = 92
    RULE_messageType = 93
    RULE_identifier = 94
    RULE_alwaysIdent = 95
    RULE_sometimesIdent = 96

    ruleNames =  [ "file", "fileElement", "commentDecl", "syntaxDecl", "syntaxLevel", 
                   "stringLiteral", "emptyDecl", "packageDecl", "packageName", 
                   "importDecl", "importedFileName", "typeName", "qualifiedIdentifier", 
                   "fieldDeclTypeName", "messageFieldDeclTypeName", "extensionFieldDeclTypeName", 
                   "oneofFieldDeclTypeName", "methodDeclTypeName", "fieldDeclIdentifier", 
                   "messageFieldDeclIdentifier", "extensionFieldDeclIdentifier", 
                   "oneofFieldDeclIdentifier", "methodDeclIdentifier", "fullyQualifiedIdentifier", 
                   "optionDecl", "compactOptions", "compactOption", "optionName", 
                   "optionValue", "scalarValue", "uintLiteral", "intLiteral", 
                   "floatLiteral", "messageLiteralWithBraces", "messageTextFormat", 
                   "messageLiteralField", "messageLiteralFieldName", "specialFieldName", 
                   "extensionFieldName", "typeURL", "value", "messageValue", 
                   "messageLiteral", "listLiteral", "listElement", "listOfMessagesLiteral", 
                   "messageDecl", "messageName", "messageElement", "messageFieldDecl", 
                   "fieldDeclWithCardinality", "fieldCardinality", "fieldName", 
                   "fieldNumber", "mapFieldDecl", "mapType", "mapKeyType", 
                   "groupDecl", "oneofDecl", "oneofName", "oneofElement", 
                   "oneofFieldDecl", "oneofGroupDecl", "extensionRangeDecl", 
                   "tagRanges", "tagRange", "tagRangeStart", "tagRangeEnd", 
                   "messageReservedDecl", "names", "enumDecl", "enumName", 
                   "enumElement", "enumValueDecl", "enumValueName", "enumValueNumber", 
                   "enumReservedDecl", "enumValueRanges", "enumValueRange", 
                   "enumValueRangeStart", "enumValueRangeEnd", "extensionDecl", 
                   "extendedMessage", "extensionElement", "extensionFieldDecl", 
                   "serviceDecl", "serviceName", "serviceElement", "methodDecl", 
                   "methodName", "inputType", "outputType", "methodElement", 
                   "messageType", "identifier", "alwaysIdent", "sometimesIdent" ]

    EOF = Token.EOF
    WS=1
    LINE_COMMENT=2
    BLOCK_COMMENT=3
    BYTE_ORDER_MARK=4
    SYNTAX=5
    IMPORT=6
    WEAK=7
    PUBLIC=8
    PACKAGE=9
    OPTION=10
    INF=11
    REPEATED=12
    OPTIONAL=13
    REQUIRED=14
    BOOL=15
    STRING=16
    BYTES=17
    FLOAT=18
    DOUBLE=19
    INT32=20
    INT64=21
    UINT32=22
    UINT64=23
    SINT32=24
    SINT64=25
    FIXED32=26
    FIXED64=27
    SFIXED32=28
    SFIXED64=29
    GROUP=30
    ONEOF=31
    MAP=32
    EXTENSIONS=33
    TO=34
    MAX=35
    RESERVED=36
    ENUM=37
    MESSAGE=38
    EXTEND=39
    SERVICE=40
    RPC=41
    STREAM=42
    RETURNS=43
    IDENTIFIER=44
    INT_LITERAL=45
    FLOAT_LITERAL=46
    INVALID_INT_LITERAL=47
    INVALID_FLOAT_LITERAL=48
    STRING_LITERAL=49
    SEMICOLON=50
    COMMA=51
    DOT=52
    SLASH=53
    COLON=54
    EQUALS=55
    MINUS=56
    PLUS=57
    L_PAREN=58
    R_PAREN=59
    L_BRACE=60
    R_BRACE=61
    L_BRACKET=62
    R_BRACKET=63
    L_ANGLE=64
    R_ANGLE=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class FileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ProtobufParser.EOF, 0)

        def BYTE_ORDER_MARK(self):
            return self.getToken(ProtobufParser.BYTE_ORDER_MARK, 0)

        def syntaxDecl(self):
            return self.getTypedRuleContext(ProtobufParser.SyntaxDeclContext,0)


        def fileElement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProtobufParser.FileElementContext)
            else:
                return self.getTypedRuleContext(ProtobufParser.FileElementContext,i)


        def getRuleIndex(self):
            return ProtobufParser.RULE_file

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFile" ):
                listener.enterFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFile" ):
                listener.exitFile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFile" ):
                return visitor.visitFile(self)
            else:
                return visitor.visitChildren(self)




    def file_(self):

        localctx = ProtobufParser.FileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_file)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 195
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 194
                self.match(ProtobufParser.BYTE_ORDER_MARK)


            self.state = 198
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 197
                self.syntaxDecl()


            self.state = 203
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1127961491146316) != 0):
                self.state = 200
                self.fileElement()
                self.state = 205
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 206
            self.match(ProtobufParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FileElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def importDecl(self):
            return self.getTypedRuleContext(ProtobufParser.ImportDeclContext,0)


        def packageDecl(self):
            return self.getTypedRuleContext(ProtobufParser.PackageDeclContext,0)


        def optionDecl(self):
            return self.getTypedRuleContext(ProtobufParser.OptionDeclContext,0)


        def messageDecl(self):
            return self.getTypedRuleContext(ProtobufParser.MessageDeclContext,0)


        def enumDecl(self):
            return self.getTypedRuleContext(ProtobufParser.EnumDeclContext,0)


        def extensionDecl(self):
            return self.getTypedRuleContext(ProtobufParser.ExtensionDeclContext,0)


        def serviceDecl(self):
            return self.getTypedRuleContext(ProtobufParser.ServiceDeclContext,0)


        def emptyDecl(self):
            return self.getTypedRuleContext(ProtobufParser.EmptyDeclContext,0)


        def commentDecl(self):
            return self.getTypedRuleContext(ProtobufParser.CommentDeclContext,0)


        def getRuleIndex(self):
            return ProtobufParser.RULE_fileElement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFileElement" ):
                listener.enterFileElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFileElement" ):
                listener.exitFileElement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFileElement" ):
                return visitor.visitFileElement(self)
            else:
                return visitor.visitChildren(self)




    def fileElement(self):

        localctx = ProtobufParser.FileElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_fileElement)
        try:
            self.state = 217
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 208
                self.importDecl()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 209
                self.packageDecl()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 3)
                self.state = 210
                self.optionDecl()
                pass
            elif token in [38]:
                self.enterOuterAlt(localctx, 4)
                self.state = 211
                self.messageDecl()
                pass
            elif token in [37]:
                self.enterOuterAlt(localctx, 5)
                self.state = 212
                self.enumDecl()
                pass
            elif token in [39]:
                self.enterOuterAlt(localctx, 6)
                self.state = 213
                self.extensionDecl()
                pass
            elif token in [40]:
                self.enterOuterAlt(localctx, 7)
                self.state = 214
                self.serviceDecl()
                pass
            elif token in [50]:
                self.enterOuterAlt(localctx, 8)
                self.state = 215
                self.emptyDecl()
                pass
            elif token in [2, 3]:
                self.enterOuterAlt(localctx, 9)
                self.state = 216
                self.commentDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommentDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LINE_COMMENT(self):
            return self.getToken(ProtobufParser.LINE_COMMENT, 0)

        def BLOCK_COMMENT(self):
            return self.getToken(ProtobufParser.BLOCK_COMMENT, 0)

        def getRuleIndex(self):
            return ProtobufParser.RULE_commentDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommentDecl" ):
                listener.enterCommentDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommentDecl" ):
                listener.exitCommentDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommentDecl" ):
                return visitor.visitCommentDecl(self)
            else:
                return visitor.visitChildren(self)




    def commentDecl(self):

        localctx = ProtobufParser.CommentDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_commentDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 219
            _la = self._input.LA(1)
            if not(_la==2 or _la==3):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SyntaxDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SYNTAX(self):
            return self.getToken(ProtobufParser.SYNTAX, 0)

        def EQUALS(self):
            return self.getToken(ProtobufParser.EQUALS, 0)

        def syntaxLevel(self):
            return self.getTypedRuleContext(ProtobufParser.SyntaxLevelContext,0)


        def SEMICOLON(self):
            return self.getToken(ProtobufParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return ProtobufParser.RULE_syntaxDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSyntaxDecl" ):
                listener.enterSyntaxDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSyntaxDecl" ):
                listener.exitSyntaxDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSyntaxDecl" ):
                return visitor.visitSyntaxDecl(self)
            else:
                return visitor.visitChildren(self)




    def syntaxDecl(self):

        localctx = ProtobufParser.SyntaxDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_syntaxDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 221
            self.match(ProtobufParser.SYNTAX)
            self.state = 222
            self.match(ProtobufParser.EQUALS)
            self.state = 223
            self.syntaxLevel()
            self.state = 224
            self.match(ProtobufParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SyntaxLevelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stringLiteral(self):
            return self.getTypedRuleContext(ProtobufParser.StringLiteralContext,0)


        def getRuleIndex(self):
            return ProtobufParser.RULE_syntaxLevel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSyntaxLevel" ):
                listener.enterSyntaxLevel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSyntaxLevel" ):
                listener.exitSyntaxLevel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSyntaxLevel" ):
                return visitor.visitSyntaxLevel(self)
            else:
                return visitor.visitChildren(self)




    def syntaxLevel(self):

        localctx = ProtobufParser.SyntaxLevelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_syntaxLevel)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 226
            self.stringLiteral()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING_LITERAL(self, i:int=None):
            if i is None:
                return self.getTokens(ProtobufParser.STRING_LITERAL)
            else:
                return self.getToken(ProtobufParser.STRING_LITERAL, i)

        def getRuleIndex(self):
            return ProtobufParser.RULE_stringLiteral

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringLiteral" ):
                listener.enterStringLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringLiteral" ):
                listener.exitStringLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStringLiteral" ):
                return visitor.visitStringLiteral(self)
            else:
                return visitor.visitChildren(self)




    def stringLiteral(self):

        localctx = ProtobufParser.StringLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_stringLiteral)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 229 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 228
                self.match(ProtobufParser.STRING_LITERAL)
                self.state = 231 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==49):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EmptyDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMICOLON(self):
            return self.getToken(ProtobufParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return ProtobufParser.RULE_emptyDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmptyDecl" ):
                listener.enterEmptyDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmptyDecl" ):
                listener.exitEmptyDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEmptyDecl" ):
                return visitor.visitEmptyDecl(self)
            else:
                return visitor.visitChildren(self)




    def emptyDecl(self):

        localctx = ProtobufParser.EmptyDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_emptyDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 233
            self.match(ProtobufParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PackageDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PACKAGE(self):
            return self.getToken(ProtobufParser.PACKAGE, 0)

        def packageName(self):
            return self.getTypedRuleContext(ProtobufParser.PackageNameContext,0)


        def SEMICOLON(self):
            return self.getToken(ProtobufParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return ProtobufParser.RULE_packageDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPackageDecl" ):
                listener.enterPackageDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPackageDecl" ):
                listener.exitPackageDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPackageDecl" ):
                return visitor.visitPackageDecl(self)
            else:
                return visitor.visitChildren(self)




    def packageDecl(self):
